pipelines/rollout/event_listener_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: el-rollout-pipeline
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-rollout-pipeline
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http-listener
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: http-metrics
      protocol: TCP
      port: 9000
      targetPort: 9000
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: event-listener-rollout-pipeline
